# audiofy

./: Cargo.toml  README.md
src/: article.rs  main.rs  validation.rs
src/api/: mod.rs  openai_client.rs
src/audio/: audiofy.rs  mod.rs
