[package]
name = "audiofy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
dotenv = "0.15.0"
reqwest = { version = "0.11.23", features = ["json"] }
scraper = "0.18.1"
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["full"] }
url = "2.5.0"
